<resources>
    <string name="app_name">Quran App</string>
    <string name="surah">Surahs</string>
    <string name="juz">Juz</string>
    <string name="title">Quran</string>
    <string name="bookmarks">Saves</string>
    <string name="open_bookmark">Open bookmark</string>
    <string name="bookmark">Bookmark</string>
    <string name="toggle_dark_mode">Toggle dark mode</string>
    <string name="juz_progress">Juz progress</string>
    <string name="quran_page">quran page</string>
    <string name="play_icon">play icon</string>
    <string name="continue_reading">Continue · Page %d</string>
    <string name="milestone_reached">Milestone Reached</string>
    <string name="juz_completed">Juz %d Completed!</string>
    <string name="total_time">Total Time</string>
    <string name="avg_page_time">Avg Page Time</string>
    <string name="start_next_juz">Start Juz %1$d (%2$s)</string>
    <string name="back_to_home">Back to Home</string>
    <string name="close">Close</string>
    <string name="compared_to_average">compared to your average</string>
    <string name="same_pace">Same pace as your average</string>
    <string name="percent_faster">%d%% Faster</string>
    <string name="percent_slower">%d%% Slower</string>
    <string name="new_personal_best">New Personal Best!</string>
    <string name="overall_progress">Overall Progress</string>
    <string name="next_up">Next up</string>
    <string name="share_progress">Share Progress</string>
    <string name="share_text">Alhamdulillah! I just completed Juz %d of the Holy Quran.</string>
    <string name="progress_percent">%d%%</string>
    <string name="new_version_available">New Version Available</string>
    <string name="update_description">Enjoy new features and performance improvements for a better experience.</string>
    <string name="update_now">Update Now</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="update_icon_desc">Update</string>
    <string name="notification_channel_updates">App updates</string>
    <string name="notification_download_complete">Update ready to install</string>
    <string name="notification_action_install">Install Now</string>
</resources>