<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pageViewPager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl" />

    <ImageButton
        android:id="@+id/bookmarkBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top|start"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/bookmark"
        android:padding="8dp"
        android:src="@drawable/bookmark"
        android:tint="@color/bookmark_toggle_color" />

    <ImageButton
        android:id="@+id/darkModeBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_dark_mode"
        android:padding="8dp"
        android:src="@drawable/ic_dark_mode"
        app:tint="@color/iconTint" />

    <ImageButton
        android:id="@+id/juzProgressBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/juz_progress"
        android:padding="8dp"
        android:src="@drawable/ic_history"
        app:tint="@color/iconTint" />

    <ProgressBar
        android:id="@+id/juzProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_gravity="top"
        android:layoutDirection="rtl"
        android:max="1000"
        android:progress="0"
        android:progressBackgroundTint="@android:color/transparent"
        android:progressTint="@color/juzProgressTint" />

</FrameLayout>